--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,34 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
-	
-  <head>
-    <title>Memory Game</title>
-  </head>
-  
-    <nav class="clearfix">
+<html>
+<head>
+	<title>Memory Card Game</title>
+	<link href="https://fonts.googleapis.com/css?family=Ruslan+Display" rel="stylesheet">
+   <link rel="stylesheet" type="text/css" href="CSS/style.css">
+</head>
+
+<body>
+   <div class="clearfix">
+   <nav>
       <a href="#">Instructions</a>
       <a href="#">Game</a>
-    </nav>
-    
-    <body>
-    	<h1>Memory Game</h1>
-    	<h2>Instructions</h2>
-    	<p>
-    		Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are         flipped face up over each turn. The object of the game is to turn over pairs of matching cards.
-    	</p>
-    	
-    	<div class="board">
-		<div class="card"></div>
-		<div class="card"></div>
-		<div class="card"></div>
-		<div class="card"></div>
-  	</div>
-  
-  	<footer>
-  		Created with &hearts; by <span class="name">GA</span>
-	</footer>
+   </nav>
+</div>
+   <h1> Memory Game</h1>
+   <h2> A Fun, Awesome Game</h2>
+   <p> Memory card Game is a <span class="important">simple</span> and <span class="important">fun</span> game for all ages. It is so simple that even a very young child can play with great ease. <b>Why is it awesome ? </b>Because it requires observation, concentration and a good memory to win the game. You can either play by yourself or against a friend. </p>
+   <hr>
 
-     </body>
+   <h3> Instructions</h3>
+   <p> Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p>
+   <hr>
+ <div class="board">
+   <div class="card">
+   </div>
+   <div class="card">
+   </div>
+   <div class="card">
+   </div>
+   <div class="card">
+   </div>
+ </div>  
+ <h4> Meet the developers behinds this amazing game on<a href="http://www.facebook.com"> FACEBOOK</a> / <a href="http://www.youtube.com"> YOUTUBE</a>  </h4>
 
+ <footer>
+   Created with &hearts; by <span class="name"> Kunjang Sherpa</span>
 
+ </footer> 
+
+ <script src="main.js"></script>
+
+</body>
 </html>
