created game logic

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -21,24 +21,18 @@
    <h3> Instructions</h3>
    <p> Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p>
    <hr>
- <div class="board">
-   <div class="card">
-   </div>
-   <div class="card">
-   </div>
-   <div class="card">
-   </div>
-   <div class="card">
-   </div>
+  <div id ="game-board" class="board" >
+
+     </div>
  </div>  
  <h4> Meet the developers behinds this amazing game on<a href="http://www.facebook.com"> FACEBOOK</a> / <a href="http://www.youtube.com"> YOUTUBE</a>  </h4>
 
  <footer>
-   Created with &hearts; by <span class="name"> Kunjang Sherpa</span>
+   Created with <span class = "heart"> &hearts; <span class="name"> by Kunjang G Sherpa</span>
 
  </footer> 
 
- <script src="main.js"></script>
+<script src= "main.js"> </script>
 
 </body>
 </html>
